--- a/package.json
+++ b/package.json
@@ -1,15 +1,42 @@
 {
-  "name": "react-native-auto-scale-image",
-  "version": "1.0.1",
+  "_from": "react-native-auto-scale-image",
+  "_id": "react-native-auto-scale-image@1.0.1",
+  "_inBundle": false,
+  "_integrity": "sha512-cimwT+1ikWhgni34jpqJOutG9tnqX8G2PwzqRVopy3wupUz37ediYb1fA/ljZZcPrkGHN4UckO1MNwCohrBywQ==",
+  "_location": "/react-native-auto-scale-image",
+  "_phantomChildren": {},
+  "types": "index.d.ts",
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "react-native-auto-scale-image",
+    "name": "react-native-auto-scale-image",
+    "escapedName": "react-native-auto-scale-image",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/react-native-auto-scale-image/-/react-native-auto-scale-image-1.0.1.tgz",
+  "_shasum": "a429e70284db2e1aad3b5b6a15bbb371418d0778",
+  "_spec": "react-native-auto-scale-image",
+  "_where": "E:\\SimplificaCI\\projects\\app-mobile\\doohnow",
+  "author": {
+    "name": "Sourabh Verma",
+    "url": "https://github.com/sourabhv"
+  },
+  "bugs": {
+    "url": "https://github.com/sourabhv/react-native-auto-scale-image/issues"
+  },
+  "bundleDependencies": false,
+  "dependencies": {},
+  "deprecated": false,
   "description": "React Native Image component to calculate width or height automatically, given the other value, to preserve image's aspect ratio",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sourabhv/react-native-auto-scale-image.git"
-  },
+  "devDependencies": {},
+  "homepage": "https://github.com/sourabhv/react-native-auto-scale-image#readme",
   "keywords": [
     "react-native",
     "image",
@@ -24,17 +51,20 @@
     "scale-width",
     "scale-height"
   ],
-  "author": "Sourabh Verma (https://github.com/sourabhv)",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sourabhv/react-native-auto-scale-image/issues"
-  },
-  "dependencies": {},
-  "devDependencies": {},
+  "main": "index.js",
+  "name": "react-native-auto-scale-image",
   "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-native": "^0.59.0"
   },
-  "homepage": "https://github.com/sourabhv/react-native-auto-scale-image#readme"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sourabhv/react-native-auto-scale-image.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.0.1"
 }
